fixing bleeding for mobile

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -931,6 +931,7 @@ body.menu-open .screen-content {
     .about-layout {
         padding: 0.5rem;
         gap: 0.75rem;
+        width: 95%;
     }
 
     .about-top {
